--- a/Pages/CheckOut.razor
+++ b/Pages/CheckOut.razor
@@ -106,6 +106,11 @@
             if (usage is not null)
             {
                 usage.TimeIn = DateTime.Now;
+                TimeSpan? skateTimeSpan = usage.SkateDuration();
+                if (skateTimeSpan is not null)
+                {
+                    skate.addMinutesUsed(skateTimeSpan.Value.TotalMinutes);
+                }
             }
         }
         await Context.SaveChangesAsync();
