--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -15,6 +15,7 @@
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+    <link href="_content/Blazorise.LoadingIndicator/blazorise.loadingindicator.css" rel="stylesheet" />
 
     <link href="css/site.css" rel="stylesheet" />
     <link href="LRSIceRink.styles.css" rel="stylesheet" />
