--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,4 +1,6 @@
-﻿@using System.Net.Http
+﻿@using Blazorise
+@using Blazorise.LoadingIndicator
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,5 +10,3 @@
 @using Microsoft.JSInterop
 @using LRSIceRink
 @using LRSIceRink.Shared
-@using Blazorise
-
