--- a/App.razor
+++ b/App.razor
@@ -11,4 +11,6 @@
             </LayoutView>
         </NotFound>
     </Router>
+    <MessageProvider />
+    <ModalProvider />
 </CascadingAuthenticationState>
