--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Skate Management</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>LRS Ice Rink Skate Management System</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Welcome to the skate management system
