--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Rental Check Out
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="sharpening">
+                <span class="oi oi-plus" aria-hidden="true"></span> Sharpening
+            </NavLink>
+        </div>
     </nav>
 </div>
 
