--- a/Pages/SkateAdmin.razor
+++ b/Pages/SkateAdmin.razor
@@ -1,4 +1,5 @@
 ﻿@page "/skateAdmin"
+@attribute [Authorize(Roles = "SuperAdmin, Admin")]
 @using LRSIceRink.Data
 @using Microsoft.EntityFrameworkCore
 @using System.Collections.Immutable
