--- a/Pages/SkateSharpening.razor
+++ b/Pages/SkateSharpening.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Sharpening"
+@attribute [Authorize(Roles = "SuperAdmin, Admin, Operator")]
 @using LRSIceRink.Data
 @using Microsoft.EntityFrameworkCore
 @using System.Collections.Immutable
