Update Roles and reset migrations

--- a/Pages/CheckOut.razor
+++ b/Pages/CheckOut.razor
@@ -1,5 +1,5 @@
 ﻿@page "/checkout"
-@attribute [Authorize(Roles = "SuperAdmin, Admin, Operator, User")]
+@attribute [Authorize(Roles = "GlobalAdmin, SkateAdmin, RentalOperator")]
 @using LRSIceRink.Data
 @using Microsoft.EntityFrameworkCore
 @using System.Collections.Immutable
