--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using LRSIceRink.Areas.Identity
 @using LRSIceRink.Areas.Identity.Pages
+@using LRSIceRink.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
