--- a/Pages/SkateSharpening.razor
+++ b/Pages/SkateSharpening.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Sharpening"
-@attribute [Authorize(Roles = "SuperAdmin, Admin, Operator")]
+@attribute [Authorize(Roles = "GlobalAdmin, SkateAdmin, Sharpening")]
 @using LRSIceRink.Data
 @using Microsoft.EntityFrameworkCore
 @using System.Collections.Immutable
