--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Sharpening
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="skateadmin">
+                <span class="oi oi-plus" aria-hidden="true"></span> Skate Administration
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="useradmin">
+                <span class="oi oi-plus" aria-hidden="true"></span> User Administration
+            </NavLink>
+        </div>
     </nav>
 </div>
 
